Ajout des fichiers de base : types, compute.hpp, check_headers et hello_cuda

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,6 @@ add_executable(hello_cuda src/hello_cuda.cu)
 target_link_libraries(hello_cuda PRIVATE CUDA::cudart)
 # (optionnel) évite la séparabilité pour simplifier
 set_target_properties(hello_cuda PROPERTIES CUDA_SEPARABLE_COMPILATION OFF)
+
+add_executable(check_headers src/check_headers.cpp)
+target_include_directories(check_headers PRIVATE lib)
