--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,17 @@ add_executable(hello_build src/hello_build.cpp)
 find_package(CUDAToolkit REQUIRED)
 add_executable(hello_cuda src/hello_cuda.cu)
 target_link_libraries(hello_cuda PRIVATE CUDA::cudart)
-# (optionnel) évite la séparabilité pour simplifier
+
 set_target_properties(hello_cuda PROPERTIES CUDA_SEPARABLE_COMPILATION OFF)
 
 add_executable(check_headers src/check_headers.cpp)
 target_include_directories(check_headers PRIVATE lib)
+
+# --- lib CPU ---
+add_library(compute_cpu lib/compute_cpu.cpp)
+target_include_directories(compute_cpu PUBLIC lib)
+
+# --- test console CPU ---
+add_executable(test_cpu_only src/test_cpu_only.cpp)
+target_include_directories(test_cpu_only PRIVATE lib)
+target_link_libraries(test_cpu_only PRIVATE compute_cpu)
